--- a/src/chrome/skin/imagebrowser.css
+++ b/src/chrome/skin/imagebrowser.css
@@ -7,7 +7,11 @@
 
 #thumbnailgrid-panel {
 	-moz-binding: url(chrome://imagebrowser/content/viewers/thumbnailgrid/panel.xml#panel);
-	overflow: auto;
+}
+
+#thumbnailgrid-panel scrollbox {
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 #thumbnailgrid-panel thumbnail {
