Detect resigin and pass on to display panel. Detect viewport area and calculate the number of required columns. Redraw on difference to current display.

--- a/src/chrome/skin/imagebrowser.css
+++ b/src/chrome/skin/imagebrowser.css
@@ -17,3 +17,7 @@
 #thumbnailgrid-panel thumbnail {
 	-moz-binding: url(chrome://imagebrowser/content/viewers/thumbnailgrid/panel.xml#thumbnail);
 }
+
+#thumbnailgrid-panel vbox[anonid="container"] {
+	padding: 5px 0px 5px 0px;
+}
